--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="Another idle game you have seen before... so come on in!"/>
+    <meta name="author" content="Sija"/>
+    <meta name="keywords" content="IDLE, Game, React.js"/>
+    <title>So Thirsty</title>
   </head>
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
+
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <div id="mainheading"></div>
+    <div id="maindescription"></div>
+    <div id="counter"></div>
+    <div id="multiplier"></div>
+    <div class="bottle" id="bottle"></div>
+    <div id="upgrades_text"></div>
+    <div class="upgrades_row">
+      <span class="upgrades_columns">
+        <p class="upgradesDescription">GLASS</p>
+        <span id="upgrade_1"></span>
+        <p class="upgradePrice" id="Upgrade1_Value"></p>
+        <p class="upgradePresent" id="upgrade_1_owned"></p>
+      </span>
+      <span class="upgrades_columns">
+        <p class="upgradesDescription">BUCKET</p>
+        <span id="upgrade_2"></span>
+        <p class="upgradePrice" id="Upgrade2_Value"></p>
+        <p class="upgradePresent" id="upgrade_2_owned"></p>
+      </span>
+      <span class="upgrades_columns">
+        <p class="upgradesDescription">WELL</p>
+        <span id="upgrade_3"></span>
+        <p class="upgradePrice" id="Upgrade3_Value"></p>
+        <p class="upgradePresent" id="upgrade_3_owned"></p>
+      </span>
+    </div>
   </body>
+  <footer>
+    <p id="authorFooter">Si-ja 2020</p>
+    <p id="titleFooter">SoThirsty - IDLE</p>
+  </footer>
 </html>
